# chainlink

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.chainlink/: hook-config.json  issues.db
.chainlink/rules/: global.md  tracking-normal.md  tracking-relaxed.md  tracking-strict.md  web.md
.claude/: settings.json
.claude/hooks/: post-edit-check.py  prompt-guard.py  session-start.py  work-check.py
chainlink/: CHANGELOG.md  Cargo.toml
chainlink/.chainlink/: issues.db
chainlink/.chainlink/rules/: typescript.md
chainlink/.claude/hooks/: pre-web-check.py
chainlink/fuzz/: Cargo.toml
chainlink/fuzz/fuzz_targets/: fuzz_dependency_graph.rs  fuzz_state_machine.rs
chainlink/resources/chainlink/rules/: global.md
chainlink/src/: db.rs  lib.rs  main.rs  models.rs  utils.rs
chainlink/src/commands/: comment.rs  cpitd.rs  create.rs  deps.rs  import.rs  init.rs  label.rs  list.rs  next.rs  relate.rs  search.rs  session.rs  show.rs  status.rs
chainlink/tests/: cli_integration.rs
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/.chainlink/.cache/: last-edit-time
vscode-extension/scripts/: build-binaries.js
vscode-extension/src/: extension.ts
