[package]
name = "chainlink-tracker"
version = "0.1.3"
edition = "2021"
description = "A lean issue tracker CLI for AI-assisted development sessions"
license = "MIT"
repository = "https://github.com/dollspace-gay/chainlink"
homepage = "https://github.com/dollspace-gay/chainlink"
readme = "../README.md"
keywords = ["issue-tracker", "cli", "ai-development", "session-management", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "resources/**/*",
    "build.rs",
    "LICENSE",
]

[lib]
name = "chainlink"
path = "src/lib.rs"

[[bin]]
name = "chainlink"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
arbitrary = "1"
